# grpc

./: .gitignore  README.md
clients/netstandard/: Dockerfile  Greeter.sln
clients/netstandard/GreeterClient/: GreeterClient.csproj  Program.cs
clients/nodejs/: Dockerfile  greeter_client.js  package.json
server/: Dockerfile  dev.Dockerfile  init.bat  stage.Dockerfile
server/server/: .gitignore  CMakeLists.txt  CMakeSettings.json  gServer.cpp  gServer.h
